--- a/src/style.css
+++ b/src/style.css
@@ -3,5 +3,19 @@
 }
 
 body {
-    font-family: "Karla", sans-serif;
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
+    background-color: red;
 }
+
+section {
+    padding: 20px;
+}
+
+.cards-list {
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 20px;
+    overflow-x: auto;
+}
+
